# android-game-engine

./: Cargo.toml  justfile
.zed/: settings.json
age-gfx/: Cargo.toml
editor/: Cargo.toml
editor/src/: lib.rs
vcon-widgets/: Cargo.toml
vcon-widgets/android-demo/: Cargo.toml
vcon-widgets/android-demo/app/: build.gradle
vcon-widgets/android-demo/app/src/main/: AndroidManifest.xml
vcon-widgets/android-demo/app/src/main/java/com/github/rust_mobile/agdkeframe/: MainActivity.java
vcon-widgets/android-demo/src/: demo_app.rs  lib.rs
vcon-widgets/examples/: demo.rs
vcon-widgets/src/: dpad.rs  lib.rs  thumbstick.rs
